# telegram-rss

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  init.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pytest.yml
telegram_rss/: __init__.py  __main__.py  config.py  feed.py  main.py  telegram.py  template.py  utils.py
telegram_rss/commands/: __init__.py  start.py  update.py
telegram_rss/feed/: __init__.py  channel.py  entry.py  feed.py  img.py  updater.py
tests/: test_github_poetry_starter.py  test_telegram_rss.py
