[tool.poetry]
name = "github-poetry-starter"
version = "0.2.0"
description = "GitHub Actions starter for python with python-poetry"
authors = ["hexatester <hexatester@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
pre-commit = "^2.10.0"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]
