[tool.poetry]
name = "telegram-rss"
version = "0.7.0"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pentatester/telegram-rss"
repository = "https://github.com/pentatester/telegram-rss"
description = "Fetch rss and send the latest update to telegram."
authors = ["hexatester <hexatester@protonmail.com>"]
packages = [
    { include = "telegram_rss" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6.1"
feedparser = "^6.0.2"
python-telegram-bot = "^13.1"
attrs = "^20.3.0"
toml = "^0.10.2"
click = "^7.1.2"
bleach = "^3.2.3"
Jinja2 = "^2.11.3"
beautifulsoup4 = "^4.9.3"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.800"
pre-commit = "^2.10.0"
pylint = "^2.6.0"

[tool.poetry.scripts]
telegram-rss = "telegram_rss.main:main"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]
